<resources>
    <string name="app_name">Cash Homework</string>

    <string name="title_home">Home</string>

    <string name="main_fragment__no_data">No data</string>
    <string name="main_fragment__error">Error ! Already in use.</string>
    <string name="fragment_main_register_button_text">Register</string>
    <string name="fragment_main_email_text">Email</string>
    <string name="fragment_main_name_text">Name</string>
    <string name="congratulations">Congratulations !</string>
    <string name="already_registered">You\'ve already registered.</string>
</resources>
